--- a/GreenX_DCS_Assesment_Tool_Backend/.env
+++ b/GreenX_DCS_Assesment_Tool_Backend/.env
@@ -1,10 +1,13 @@
-# Database Config
+# Backend environment variables
 DB_HOST=mysql_db
 DB_PORT=3306
-DB_USER=greenx
-DB_PASSWORD=greenx
-DB_NAME=greenx
+DB_USER=root
+DB_PASSWORD=root
+DB_NAME=greenx_db
 
-# App Config
+# Application settings
 APP_PORT=8000
 APP_ENV=production
+
+# JWT/Secret keys if needed
+SECRET_KEY=mysecretkey
